Revert "feat: documenting log.info services"
This reverts commit 08ca04d300c45be7fa6e37598a04a16a69ce20c2.